# TypeScript2Cxx

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  core.cpp  core.h  main.cpp  package-lock.json  package.json  prepublish_npm.cmd  tsconfig.json  tslint.json  typescript2cxx.code-workspace
Experiment/: CMakeLists.txt  build.cmd  clean_src.bat  clean_src2.bat  copy_src.bat
Experiment/SimpleVulkanApp/: CMakeLists.txt  build.bat  build_cpp.bat  watch.bat  watch_build_cpp.bat
Experiment/SimpleVulkanApp/src/: _main.cpp  application.ts  appwindow.ts  main.cpp  main.ts  main.win32.ts  tsconfig.json  vulkan.win32.d.ts  vulkanapi.ts  window.win32.d.ts
Experiment/SimpleVulkanApp/src/native/: linmath.h  main.cpp  vulkan.win32.cpp  vulkan.win32.h  window.win32.cpp  window.win32.h
Experiment/Vulkan/: CMakeLists.txt  build.bat  run.bat
Experiment/Vulkan/src/: main.cpp
Experiment/VulkanAppBase/: CMakeLists.txt  build.bat
Experiment/VulkanAppBase/src/native/: lunarg.ppm.h  vulkan.win32.h  window.win32.cpp
Playground/: CMakeLists.txt  CMakeLists_Boost.txt  clang.bat  compile_commands.json  core.cpp  core.h  gcc.bat  main.cpp  ms.bat  ms_d.bat
Playground/cmake/: HunterGate.cmake
Playground/cmake/Hunter/: config.cmake
Playground/scripts/: build_vs2017_debug.cmd  build_vs2017_release.cmd  build_vs2019_debug.cmd  build_vs2019_release.cmd
cmake/: HunterGate.cmake
cpplib/: core.h
scripts/: build_mingw32_debug.cmd  build_mingw32_release.cmd  build_release.sh  build_vs2017_debug.cmd  build_vs2017_release.cmd
spec/: basic.spec.ts  basic_types.spec.ts  boolean.spec.ts  break_continue.spec.ts  class.spec.ts  delete.spec.ts  discrepancies.spec.ts  exports.spec.ts  functions.spec.ts  instanceof.spec.ts  lang.spec.ts  modules_and_namespaces.spec.ts  number.spec.ts  object.spec.ts  operators.spec.ts  regexp.spec.ts  scopes.spec.ts  special_cases.spec.ts  statements.spec.ts  string.spec.ts  try_catch_finally.spec.ts  typeof.spec.ts  undefined.spec.ts  variable_declarations.spec.ts
src/: binarywriter.ts  codewriter.ts  compiler.ts  contexts.ts  emitter.ts  helpers.ts  main.ts  opcodes.ts  package.json  preprocessor.ts  resolvers.ts  typeInfo.ts  types.ts
test/: CMakeLists.txt  build_test.bat  build_test_clang.bat  clang_build.bat  clang_test.bat  compile_commands.json  compile_test.bat  inf.cpp  ms.bat  ms_d.bat  ms_test.bat  ms_test_d.bat  out1  test.bat  test.cpp  test.h  test.js  test.ts  test0.ts  test_0.cpp  test_0.h  test_0.ts  tsconfig.json  tsconfig.test.json
test/lang-test0/: 00float.ts  01arguments.ts  02numbers.ts  05strings.ts  09postprefix.ts  10arrayincrement.ts  12referencecollection.ts  15references.ts  19forof.ts  22lambdas.ts  30null.ts  49unicode.ts  lang-test0.ts
test/scripts/: build_debug.sh  build_mingw32_debug.cmd  build_mingw32_release.cmd  build_vs2017_debug.cmd  build_vs2017_release.cmd  build_vs2019_debug.cmd  build_vs2019_release.cmd  build_vs2022_debug.cmd  build_vs2022_release.cmd
